--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
-    "@material-ui/core": "^4.11.0 --force",
-    "@material-ui/icons": "^4.11.3 --force",
-    "@material-ui/lab": "^4.0.0-alpha.56 --force",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
