--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-snapshot": "^1.0.4 --force",
+    "react-snapshot": "^1.0.4",
     "react-transition-group": "^4.4.1",
     "react-typical": "^0.1.3",
     "sweetalert2": "^11.4.10",
@@ -62,4 +62,7 @@
   "devDependencies": {
     "emailjs": "^4.0.0"
   }
+  
+   
+  
 }
