--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
-    "react-snapshot": "^1.0.4",
     "react-transition-group": "^4.4.1",
     "react-typical": "^0.1.3",
     "sweetalert2": "^11.4.10",
@@ -34,16 +33,11 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build && react-snapshot",
+    "build": "react-scripts build ",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "reactSnapshot": {
-    "exclude": [
-      "/resume"
-    ],
-    "snapshotDelay": 1000
-  },
+ 
   "eslintConfig": {
     "extends": "react-app"
   },
