--- a/package.json
+++ b/package.json
@@ -18,26 +18,34 @@
     "gh-pages": "^4.0.0",
     "ios-inner-height": "^1.1.1",
     "popmotion": "^8.7.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
+    
     "react-transition-group": "^4.4.1",
     
     "sweetalert2": "^11.4.10",
-    "three": "^0.125.0"
-   
+    "three": "^0.125.0",
+    "react-snapshot": "^1.0.4",
+    "react-typical": "^0.1.3",
+    "use-dencrypt-effect": "1.0.1"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build ",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
- 
+  "reactSnapshot": {
+    "exclude": [
+      "/resume"
+    ],
+    "snapshotDelay": 1000
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
