--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
-  "homepage": "https://palannagariashok.github.io/react-portfolio-main",
+  "homepage": "https://palannagariashok.github.io",
   "description": "A clean and customizable ReactJS portfolio template for fellow developers. Credits to Jo Lienhoop!",
   "repository": "",
   "author": "Ashok Reddy <palannagari.ashok@gmail.com>",
